# edi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
edi/: Cargo.toml
edi-frame/: Cargo.toml
edi-frame/src/: cell.rs  lib.rs  prelude.rs  rect.rs  surface.rs  unit.rs
edi-lib/: Cargo.toml
edi-lib/src/: brand.rs  itoa.rs  lib.rs  trace.rs  trace_subscriber.rs  vec2.rs
edi-lib/src/buffer/: draw.rs  mod.rs  write.rs
edi-lib/src/fs/: filetype.rs
edi-lib/src/string/: highlight.rs  mod.rs  position.rs  search.rs
edi-rope/: Cargo.toml
edi-rope/benches/: big_ipsum.txt  medium_ipsum.txt  rope_bench.rs  small_ipsum.txt
edi-rope/src/: info.rs  iter.rs  leaf.rs  lib.rs  node.rs  string.rs  value.rs
edi-term/: Cargo.toml
edi-term/src/: coord.rs  escaping.rs  input.rs  lib.rs  prettify.rs  window.rs
edi-term/src/frame/: rect.rs
edi/src/: cbuffer.rs  cli.rs  error.rs  lib.rs  log.rs  main.rs  rect.rs  trace.rs
edi/src/app/: action.rs  buffer_bundle.rs  buffers.rs  context.rs  meta.rs  mod.rs  state.rs
edi/src/buffer/: draw.rs  mod.rs  write.rs
edi/src/controller/: handle.rs  handler.rs  mod.rs
edi/src/draw/: mod.rs
edi/src/event/: handler.rs  handlers.rs  manager.rs  mod.rs  sender.rs  source.rs  sources.rs
edi/src/event/emitter/: buffer.rs
edi/src/event/handlers/: draw.rs  input.rs
edi/src/fs/: filetype.rs  mod.rs
edi/src/handlers/: command.rs  draw.rs  history.rs  input.rs  mod.rs  mode.rs  movement.rs  spawn.rs  write.rs
edi/src/query/: mod.rs
edi/src/string/: highlight.rs  search.rs
edi/src/terminal/: input.rs
src/: app.rs  buffer.rs  cli.rs  escaping.rs  input.rs  lib.rs  log.rs  main.rs  rect.rs  rope.rs  terminal.rs  trace.rs  vec2.rs  window.rs
src/app/: action.rs  event.rs  meta.rs  mod.rs
src/buffer/: draw.rs  mod.rs
src/draw/: mod.rs
src/fs/: mod.rs
src/rope/: iter.rs  mod.rs
src/string/: highlight.rs  mod.rs  position.rs  search.rs
src/terminal/: escaping.rs  input.rs  mod.rs  window.rs
