[package]
name = "edi"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.30.1", features = ["ioctl", "term"] }
anyhow = "1.0.95"
thiserror = "2.0.1"
timeout-readwrite = "0.4.0"

[dev-dependencies]
rand = "0.8.5"

[lints.rust]
unused_crate_dependencies = "warn"
keyword_idents = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"

[lints.clippy]
pedantic = "warn"
all = "warn"
cognitive_complexity = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
float_equality_without_abs = "warn"
missing_const_for_fn = "warn"
option_if_let_else = "warn"
semicolon_if_nothing_returned = "warn"
unseparated_literal_suffix = "warn"
shadow_unrelated = "warn"
similar_names = "warn"
suspicious_operation_groupings = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
module_name_repetitions = "allow"

