[workspace]
members = [
	"edi", "edi-frame", "edi-lib", "edi-rope", "edi-term",
]
default-members=["edi"]
resolver = "2"

[workspace.lints.rust]
unused_crate_dependencies = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
keyword_idents = { level = "warn", priority = -1 }

[workspace.lints.clippy]
dbg_macro = "warn"
cognitive_complexity = "warn"
debug_assert_with_mut_call = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
float_equality_without_abs = "warn"
missing_const_for_fn = "warn"
option_if_let_else = "warn"
semicolon_if_nothing_returned = "warn"
unseparated_literal_suffix = "warn"
shadow_unrelated = "allow"
similar_names = "allow"
suspicious_operation_groupings = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
module_name_repetitions = "allow"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
