[package]
name = "edi"
version = "0.1.0"
edition = "2021"

[dependencies]
edi-rope = { path = "../edi-rope/" }
edi-term = { path = "../edi-term/" }
edi-lib = { path = "../edi-lib/" }
anyhow = "1.0.95"
smallvec = "1.15.1"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }

[lints]
workspace = true
